# futcamp-vision

./: .gitignore  CMakeLists.txt  README.md  app.cpp  app.hpp  build.sh  fchouse.conf  fcvision.conf  imodule.hpp  main.cpp  path.cpp  path.hpp  platform.hpp  threadmanager.cpp  threadmanager.hpp
hware/: camera.cpp  camera.hpp
net/: deviceserver.cpp  deviceserver.hpp
net/handlers/: camhandler.cpp  errhandler.cpp  errhandler.hpp  handlers.hpp  handlersmaker.cpp  handlersmaker.hpp  ihandler.hpp  indexhandler.cpp  notfoundhandler.cpp  notfoundhandler.hpp  photohandler.cpp  syshandler.cpp
net/http/: httpclient.cpp  httpclient.hpp  httpserver.cpp  httpserver.hpp  pageparser.cpp  pageparser.hpp
net/http/handlers/: camhandler.cpp  camhandler.hpp  errhandler.cpp  errhandler.hpp  fileshandler.cpp  fileshandler.hpp  handlers.hpp  handlersmaker.cpp  indexhandler.hpp  notfoundhandler.cpp  notfoundhandler.hpp  photohandler.hpp  syshandler.hpp
net/tcp/: tcpclient.cpp  tcpclient.hpp  tcpserver.cpp  tcpserver.hpp
sys/: system.cpp  system.hpp
templates/: 403.html  404.html  index.html  photo.html
templates/html/: 403.html  404.html  photo.html
utils/: configs.cpp  configs.hpp  locker.cpp  locker.hpp  log.cpp  log.hpp  utils.cpp  utils.hpp
utils/cfg/: cfgreader.cpp  cfgreader.hpp
